--- a/index.html
+++ b/index.html
@@ -9,37 +9,52 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-    <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <!-- ? Favicon -->
+    <link href="images/favicon-32x32.png" rel="icon" />
 
-    <!-- Google Fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    /> -->
-
-    <!-- Vendor CSS Files -->
+    <!-- ? CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="assets/sweet_alert/sweet_alert2.min.css">
     <link rel="stylesheet" href="assets/iziToast/dist/css/iziToast.min.css">
 
     <link rel="stylesheet" href="assets/leaflet/leaflet.css">
-    <script src="assets/leaflet/leaflet.js"></script>
 
     <link href="assets/css/main.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
+    <!-- ? CSS Files -->
+
 </head>
 
 <body>
-  <div id="cover-spin"></div>
+    <!-- ? - TopBar - Start - ? -->
+    <section id="topbar" class="topbar d-flex align-items-center" style="background-color: #45409C;">
+        <div class="container d-flex justify-content-center justify-content-md-between">
+            <div class="contact-info d-flex align-items-center">
+                <i class="bi bi-envelope d-flex align-items-center">
+                    <a href="mailto:kalhoromuqtadir125@gmail.com">kalhoromuqtadir125@gmail.com</a></i>
+            </div>
+            <div class="social-links d-none d-md-flex align-items-center">
+                <a href="https://github.com/Muqtadir44" class="github">
+                    <i class="bi bi-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/abdulmuqtadirkalhoro125/" class="linkedin">
+                    <i class="bi bi-linkedin"></i>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- ? - TopBar - End - ? -->
+
+
+    <!-- ? - Spinner - ? -->
+    <div id="cover-spin"></div>
+    <!-- ? - Spinner - ? -->
+
+    <!-- ? - Main Content - Start - ? -->
     <main>
         <div class="top">
             <h1 class="title fw-semibold">IP Address Tracker</h1>
@@ -49,7 +64,7 @@
                     <img src="images/icon-arrow.svg" alt="Submit Button" />
                 </button>
             </form>
-            <div class="info" id="info" data-aos="fade-up" data-aos-delay="50">
+            <div class="info" id="info" data-aos="fade-up" data-aos-delay="50" style="display: none;">
                 <div class="box ip-info-box">
                     <span class="field-name fw-semibold">ip address</span>
                     <span class="info-field" id="ip-info"></span>
@@ -70,46 +85,24 @@
         </div>
         <div id="map"></div>
     </main>
-
-
-    <!--
-  IP Address Tracker
-
-  Search for any IP address or domain
-
-  IP Address
-  Location
-  Timezone
-  UTC
-  ISP
--->
-    <!-- add offset value dynamically using the API -->
-
-    <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Abdul Muqtadir</a>.
-  </div> -->
+    <!-- ? - Main Content - End - ? -->
 
 
 
-    <!-- Vendor JS Files -->
+
+
+    <!-- ? - Script Files - ?-->
+    <script src="assets/leaflet/leaflet.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <!--
-      <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-  -->
     <script src="assets/iziToast/dist/js/iziToast.min.js"></script>
-    <script src="assets/sweet_alert/sweet_alert2.all.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <script src="assets/js/main.js"></script>
     <script src="assets/js/script.js"></script>
-
 </body>
 
 </html>
